[gd_scene load_steps=8 format=3 uid="uid://bh6wxwjtwfcwq"]

[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Menu UI/navButton.gd" id="1_82tdh"]
[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Game UI/pause_menu.gd" id="1_acbnt"]
[ext_resource type="Texture2D" uid="uid://cdgj6ewrllrtj" path="res://RDE_Images/RDE_Comments_QRCode.png" id="3_32ybn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7iwrl"]
content_margin_left = 9.0
content_margin_top = 5.0
content_margin_bottom = 5.0

[sub_resource type="SystemFont" id="SystemFont_vut3q"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_lfwrd"]
default_font = SubResource("SystemFont_vut3q")
default_font_size = 30

[sub_resource type="Shortcut" id="Shortcut_barfy"]

[node name="pause_menu" type="CanvasLayer"]
script = ExtResource("1_acbnt")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -92.0
offset_right = 103.0
offset_bottom = 68.0
grow_vertical = 2
scale = Vector2(3.17, 3.17)
pivot_offset = Vector2(0, 88.155)
theme_override_styles/panel = SubResource("StyleBoxEmpty_7iwrl")

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="resumeB" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lfwrd")
shortcut = SubResource("Shortcut_barfy")
text = "Resume"
script = ExtResource("1_82tdh")

[node name="resetB" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lfwrd")
text = "Reset"
script = ExtResource("1_82tdh")

[node name="quitB" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lfwrd")
text = "Quit"
script = ExtResource("1_82tdh")

[node name="settingsB" type="Button" parent="PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Settings"
script = ExtResource("1_82tdh")

[node name="QRCode" type="TextureRect" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -166.0
offset_right = 126.0
offset_bottom = 126.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.495, 0.495)
texture = ExtResource("3_32ybn")

[connection signal="pressed" from="PanelContainer/HBoxContainer/resumeB" to="." method="_on_resume_b_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/resetB" to="." method="_on_reset_b_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/quitB" to="." method="_on_quit_b_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/settingsB" to="." method="_on_settings_b_pressed"]
